Fix invisible form inputs bug
Opacity will not bundle correctly if percentages are used: https://github.com/facebook/create-react-app/issues/7980

--- a/client/src/components/UserLogin/login.css
+++ b/client/src/components/UserLogin/login.css
@@ -29,12 +29,9 @@
   margin-top: 100px;
 }
 
-.login > input {
-}
-
 input {
   margin: 0 auto;
-  opacity: 50%;
+  opacity: 0.5;
   color: black;
   margin-top: 10px;
   width: 300px;
@@ -56,6 +53,7 @@ i {
   top: 38%;
   right: 23%;
 }
+
 i:hover {
   color: #00fcb6;
   cursor: pointer;
